# win32-test

./: .gitignore  CMakeLists.txt  main.cpp
d3d/: d3d.sln  qodana.yaml
d3d/Polygon/: Polygon.cpp  Polygon.sln  Polygon.vcxproj  Polygon.vcxproj.filters
d3d/animation/: animation.vcxproj
d3d/computeshader/: computeshader.cpp  computeshader.vcxproj  computeshader.vcxproj.filters  cs.hlsl
d3d/d3dvs/: d3dvs.cpp  d3dvs.sln  d3dvs.vcxproj  d3dvs.vcxproj.filters
d3d/hello/: CMakeLists.txt  main.cpp
d3d/hellod3d/: hellod3d.cpp  hellod3d.sln  hellod3d.vcxproj  hellod3d.vcxproj.filters
d3d/ik/: Util.cpp  ik.vcxproj  ik.vcxproj.filters
d3d/iktest/: Resource.h  iktest.cpp  iktest.rc  iktest.vcxproj  iktest.vcxproj.filters
d3d/material/: BasicPixelShader.hlsl  BasicShaderHeader.hlsli  material.cpp  material.vcxproj  material.vcxproj.filters
d3d/matrix/: Resource.h  matrix.cpp  matrix.rc  matrix.vcxproj  matrix.vcxproj.filters
d3d/multipath/: Util.cpp  multipath.vcxproj  multipath.vcxproj.filters
d3d/multipath2/: Application.cpp  Application.h  Util.h  multipath2.vcxproj  multipath2.vcxproj.filters
d3d/pmd/: BasicPixelShader.hlsl  BasicShaderHeader.hlsli  pmd.cpp  pmd.vcxproj  pmd.vcxproj.filters
d3d/pmd2/: BasicShaderHeader.hlsli  BasicVertexShader.hlsl  pmd2.cpp  pmd2.vcxproj  pmd2.vcxproj.filters
d3d/posing/: Application.h  BasicShaderHeader.hlsli  ClassDiagram.cd  posing.vcxproj  posing.vcxproj.filters  refactor.vcxproj
d3d/posing2/: Application.h  Util.cpp  Util.h  main.cpp  posing2.vcxproj  posing2.vcxproj.filters
d3d/refactor/: Application.cpp  Application.h  BasicPixelShader.hlsl  BasicShaderHeader.hlsli  DXCommand.h  DXDevice.h  DXEngine.cpp  DXEngine.h  DXFactory.h  DXProcess.cpp  DXProcess.h  DXUtil.cpp  DXUtil.h  PMDModel.cpp  PMDModel.h  Util.cpp  Util.h  content.txt  refactor.vcxproj  refactor.vcxproj.filters
d3d/refactor2/: Application.cpp  Application.h  Util.cpp  main.cpp  refactor2.vcxproj  refactor2.vcxproj.filters
d3d/refactor3/: Application.cpp  Application.h  BasicPixelShader.hlsl  BasicShaderHeader.hlsli  BasicVertexShader.hlsl  ClassDiagram.cd  ConstantBuffer.h  DXBuffer.h  DXCommand.cpp  DXCommand.h  DXDescriptorHeap.cpp  DXDescriptorHeap.h  DXDevice.h  DXEngine.cpp  DXEngine.h  DXFactory.h  DXFence.cpp  DXFence.h  DXProcess.cpp  DXProcess.h  DXUtil.cpp  DepthStencilBuffer.cpp  DepthStencilBuffer.h  Display.cpp  Display.h  DisplayMatrix.cpp  DisplayMatrix.h  GlobalDescriptorHeap.cpp  GlobalDescriptorHeap.h  GlobalDescriptorHeap1.cpp  PMDModel.cpp  PMDModel.h  PMDRenderer.cpp  PMDRenderer.h  Util.cpp  refactor3.vcxproj  refactor3.vcxproj.filters
d3d/shadow/: shadow.vcxproj
d3d/shadowmap/: shadowmap.vcxproj
d3d/shadowmap2/: Application.h  Util.cpp  Util.h  shadowmap2.vcxproj  shadowmap2.vcxproj.filters
d3d/texture/: BasicPixelShader.hlsl  texture.cpp  texture.vcxproj  texture.vcxproj.filters
d3d/transform/: tranform.cpp  transform.vcxproj  transform.vcxproj.filters
direct2d_1/: CMakeLists.txt  Makefile  base_window.cpp  main.cpp
direct2d_image/: CMakeLists.txt  base_window.h  main.cpp  main_window.cpp  main_window.h
direct2d_rendertarget/: CMakeLists.txt  main.cpp
direct_write_2/: CMakeLists.txt  base_window.h  hello_text.cpp  hello_text.h  main.cpp
direct_write_3/: CMakeLists.txt  hello_text.cpp  hello_text.h
direct_write_all/: CMakeLists.txt  base_window.h  directwriteall.manifest  hello_text.cpp  hello_text.h  main_window.cpp  main_window.h
direct_write_hello/: CMakeLists.txt  hello_text.cpp  main.cpp
direct_write_multisrytyle/: CMakeLists.txt  hello_text.cpp  hello_text.h  main.cpp  multi_style_text.cpp  multi_style_text.h
directwrite/: Resource.h  directwrite.cpp  directwrite.rc  directwrite.sln  directwrite.vcxproj  directwrite.vcxproj.filters  hello_text.cpp  hello_text.h
fbxsdk/helloworld/: helloworld.sln  helloworld.vcxproj  main.cpp
hello-world/: CMakeLists.txt  Makefile
hello_thread/: CMakeLists.txt  main.cpp
hello_world/: CMakeLists.txt  Makefile
jnitest/src/java_window2/native/: CMakeLists.txt  java_component.cpp  java_component.h  java_window.cpp  java_window.h  java_window2_java_Button.h  java_window2_java_Component.h  java_window2_java_Window.h  util.h
jnitest/src/java_window3/native/: CMakeLists.txt  java_button.cpp  java_button.h  java_component.cpp  java_component.h  java_window.cpp  java_window.h  java_window3_java_Button.h  java_window3_java_Component.h  java_window3_java_Window.h  util.cpp
jnitest/src/java_window4/native/: CMakeLists.txt  dx_factory.cpp  dx_factory.h  java_component.cpp  java_component.h  java_text.cpp  java_text.h  java_window.cpp  java_window.h  java_window4_java_Component.h  java_window4_java_Text.h  java_window4_java_Window.h  jniutil.cpp  jniutil.h  util.cpp  util.h
jnitest/src/windowjava/: Button.java  CMakeLists.txt  Component.java  Main.java  Window.java  java_button.cpp  java_button.h  java_component.cpp  java_component.h  java_window.cpp  java_window.h  util.cpp  window_test.cpp  windowjava_Button.h  windowjava_Component.h  windowjava_Window.h
split_classes/: CMakeLists.txt  base_window.h  main.cpp
visualstudio/WinTest1/: BaseWindow.h  Resource.h  WinTest1.cpp  WinTest1.rc  WinTest1.sln  WinTest1.vcxproj  WinTest1.vcxproj.filters
win32book/bitmap/: CMakeLists.txt  main.c
win32book/control/: CMakeLists.txt  main.c  main.rc  resource.h
win32book/dialog_modal/: CMakeLists.txt  main.c  main.rc  resource.h
win32book/dialog_modeless/: CMakeLists.txt  main.c  main.rc
win32book/graphic_ellipse/: CMakeLists.txt  main.c
win32book/graphic_lines/: CMakeLists.txt  graphic_lines.c
win32book/graphic_points/: CMakeLists.txt  points.c
win32book/graphic_polygon/: CMakeLists.txt  graphic_polygon.c
win32book/graphic_rect/: CMakeLists.txt  graphic_rect.c
win32book/menu/: main.c  (+3 more)
winsock/hello/: CMakeLists.txt  client.cpp  server.cpp
winsock/udp/: CMakeLists.txt  both.cpp  client.cpp  server.cpp
winsock/window/: BaseWindow.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  udp.cpp
(+255 files in other folders)
