cmake_minimum_required(VERSION 3.29)
project(winsock-hello CXX)

add_executable(winsock-hello-client client.cpp)
add_executable(winsock-hello-server server.cpp)
target_link_libraries(winsock-hello-client PUBLIC WS2_32.lib)
target_link_libraries(winsock-hello-client PUBLIC MsWSock.lib)
target_link_libraries(winsock-hello-client PUBLIC AdvAPI32.lib)
target_link_libraries(winsock-hello-server PUBLIC WS2_32.lib)
target_link_libraries(winsock-hello-server PUBLIC MsWSock.lib)
target_link_libraries(winsock-hello-server PUBLIC AdvAPI32.lib)

if (EXISTS WS2_32.lib)
    message(STATUS "there is winsock lib")
else ()
    message(STATUS "no winsock")
endif ()